--- a/shrek-web/src/index.css
+++ b/shrek-web/src/index.css
@@ -1,5 +1,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Sniglet', cursive;
+}
+
+.content {
+  width: 800px;
+  text-align: left;
+  margin: auto;
+  padding: 20px;
+}
+
+h1, h2, h3 {
+  font-family: 'Srisakdi', cursive;
 }
