--- a/shrek-web/src/index.css
+++ b/shrek-web/src/index.css
@@ -4,6 +4,11 @@ body {
   font-family: 'Sniglet', cursive;
 }
 
+.menu a {
+  margin: 10px;
+  cursor: pointer;
+}
+
 .content {
   width: 800px;
   text-align: left;
